--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -1,12 +1,4 @@
-<div class="jumbotron">
-  <div class="container">
-    <h1>유튜브에 여러분의 영상을 공유하세요!</h1>
-    <p>Click the button below to share your video from YouTube.</p>
-    <p>
-      <%= link_to 'Add video now!', new_video_path, class: 'btn btn-primary btn-lg' %>
-    </p>
-  </div>
-</div>
+
 
 <% if @videos.any? %>
   <div class="container">
@@ -24,38 +16,9 @@
                             "https://www.youtube.com/watch?v=#{video.uid}", target: '_blank' %>
                 <div class="caption">
                   <h5><%= video.title %></h5>
-                  <p>Published at <%= video.published_at.strftime('%-d %B %Y %H:%M:%S') %></p>
-                  <p>
-                    <span class="glyphicon glyphicon glyphicon-thumbs-up"></span> <%= video.likes %>
-                    <span class="glyphicon glyphicon glyphicon-thumbs-down"></span> <%= video.dislikes %>
-                  </p>
-                </div>
-              </div>
-            </div>
-          <% end %>
-        <% end %>
-      </div>
-    <% end %>
-  </div>
-<% end %>
-<hr>
-<% if @videos.any? %>
-  <div class="container">
-    <h1>비디오 사진 미리 보기</h1>
-    <div id="player-wrapper"></div>
-    <% @videos.in_groups_of(3) do |group| %>
-      <div class="row">
-        <% group.each do |video| %>
-          <% if video %>
-            <div class="col-md-4">
-              <div class="yt_video thumbnail">
-                <!--<div style="position:relative;height:0;padding-bottom:75.0%"><iframe src="https://www.youtube.com/embed/<%=video.uid%>?ecver=2" width="480" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>-->
-                <%= link_to image_tag("https://img.youtube.com/vi/#{video.uid}/mqdefault.jpg", alt: video.title,
-                                      class: 'img-rounded'),
-                            "https://www.youtube.com/watch?v=#{video.uid}", target: '_blank' %>
-                <div class="caption">
-                  <h5><%= video.title %></h5>
-                  <p>Published at <%= video.published_at.strftime('%-d %B %Y %H:%M:%S') %></p>
+                  <% unless video.published_at.nil? %>
+                     <p>Published at <%= video.published_at.strftime('%-d %B %Y %H:%M:%S') %></p>
+                  <% end %>
                   <p>
                     <span class="glyphicon glyphicon glyphicon-thumbs-up"></span> <%= video.likes %>
                     <span class="glyphicon glyphicon glyphicon-thumbs-down"></span> <%= video.dislikes %>
