--- a/app/views/video_uploads/new.html.erb
+++ b/app/views/video_uploads/new.html.erb
@@ -1,13 +1,8 @@
 <div class="container">
   <h1>Upload video</h1>
   <% if current_user %>
-    <%= form_for @video_upload do |f| %>
+    <%= form_for @video_upload,remote: true do |f| %>
       <%= render 'shared/errors', object: @video_upload %>
-
-      <div class="form-group">
-        <%= f.label :file %>
-        <%= f.file_field :file, class: 'form-control', required: true %>
-      </div>
 
       <div class="form-group">
         <%= f.label :title %>
@@ -18,10 +13,59 @@
         <%= f.label :description %>
         <%= f.text_area :description, class: 'form-control', cols: 3 %>
       </div>
-
-      <%= f.submit 'Upload', class: 'btn btn-primary' %>
+      <div class="form-group">
+        <%= f.label :category %>
+        <%= f.collection_select(:category_id, Category.all, :id, :name, {},{class: "form-control"})%>
+        <span class="help-block">Select a video category.</span>
+      </div>
+      <div class="form-group">
+        <%= f.label :file %>
+        <%= f.file_field :file, class: 'form-control',id: "ssi-upload" %>
+      </div>
+      <button id="ssi-uploadBtn" class="ssi-button success"><span class="ssi-btnIn">Upload&nbsp;</span><div id="ssi-up_loading" class="ssi-btnIn"></div></button>
+      <%#= f.submit 'Upload', class: 'btn btn-primary', id: "ssi-uploadBtn" %>
     <% end %>
   <% else %>
     <p>Please <%= link_to 'sign in', '/auth/google_oauth2' %>.</p>
   <% end %>
 </div>
+
+<script>
+    var notifyOptions = {
+        iconButtons: {
+            className: 'fa fa-question about',
+            method: function (e, modal) {
+                ssi_modal.closeAll('notify');
+                var btn = $(this).addClass('disabled');
+                ssi_modal.dialog({
+                    onClose: function () {
+                        btn.removeClass('disabled')
+                    },
+                    onShow: function () {
+                    },
+                    okBtn: {className: 'btn btn-primary btn-sm'},
+                    title: 'ssi-modal',
+                    content: 'ssi-modal is an open source modal window plugin that only depends on jquery. It has many options and it\'s super flexible, maybe the most flexible modal out there... For more details click <a class="sss" href="http://ssbeefeater.github.io/#ssi-modal" target="_blank">here</a>',
+                    sizeClass: 'small',
+                    animation: true
+                });
+            }
+        }
+    };
+    
+    
+    var data = ""
+    $('#ssi-upload').ssi_uploader({
+        onUpload: function () {
+          data={"video_upload[title]": $('#video_upload_title').val(),"video_upload[description]":$('#video_upload_description').val(),"video_upload[category_id]":$('#video_upload_category_id').val()}
+        },
+        url: '/video_uploads',
+        data: data,
+        maxFileSize: 1000,
+        maxNumberOfFiles: 1,
+        //,
+  //        allowed: ['jpg', 'gif', 'txt', 'png', 'pdf','zip']
+  //        ,onEachUpload:function(file){console.log(file)}
+      });
+</script>
+
