--- a/app/views/videos/new.html.erb
+++ b/app/views/videos/new.html.erb
@@ -9,7 +9,11 @@
       <%= f.text_field :link, class: 'form-control', required: true %>
       <span class="help-block">A link to the video on YouTube.</span>
     </div>
-
+    <div class="form-group">
+      <%= f.label :category %>
+      <%= f.collection_select(:category_id, Category.all, :id, :name, {},{class: "form-control"})%>
+      <span class="help-block">Select a video category.</span>
+    </div>
     <%= f.submit class: 'btn btn-primary' %>
   <% end %>
 </div>
